<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="vn.siliconstraits.airlight.MainActivity$PlaceholderFragment">

    <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/imageLaunch"
                android:src="@drawable/launch_image"
                android:adjustViewBounds="true"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/gray_relative"
            android:layout_below="@+id/ll_logo">
        <TextView
                android:id="@+id/txtLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_launch"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:id="@+id/txtContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_contact"
                android:textColor="@color/blue2"
                android:layout_below="@id/txtLaunch"
                android:layout_centerHorizontal="true"/>
        <EditText
                android:id="@+id/txtUrl"
                android:layout_width="100dp"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/url_launch"
                android:paddingTop="30dp"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:layout_below="@+id/txtContact"
                android:layout_toLeftOf="@+id/btnSave"/>
        <Button
                android:id="@+id/btnPaste"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Paste"
                android:layout_marginRight="20dp"
                android:paddingRight="10dp"
                android:textSize="15dp"
                android:layout_above="@+id/btnSave"
                android:layout_alignRight="@+id/btnSave"
                android:layout_alignEnd="@+id/btnSave"/>
        <Button
                android:id="@+id/btnDemo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/demo_launch"
                android:textColor="@color/stronger_gray"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@+id/txtUrl"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14dp"
                android:layout_marginLeft="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/btnSave"/>

        <Button
                android:id="@+id/btnSave"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/blue1"
                android:text="@string/run_launch"
                android:textStyle="bold"
                android:textSize="14dp"
                android:paddingTop="10dp"
                android:layout_below="@+id/txtUrl"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/viewFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_launch"
            android:textColor="@color/blue_SSS"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
</RelativeLayout>
